proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
#    cloud.google.com/neg: '{"ingress": false}'
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: "kubernetes-ingress"
#    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/v1beta1.FrontendConfig: ssl-redirect
    cert-manager.io/issuer: "letsencrypt-cloudflare-production"
spec:
  tls:
    - secretName: cert-cloudflare
      hosts:
#        - "*.autofacildespachante.com"
#        - autofacildespachante.com
#        - www.autofacildespachante.com
#        - site1.autofacildespachante.com
#        - pagamentos.autofacildespachante.com
#        - auth.autofacildespachante.com
  defaultBackend:
    service:
      name: site1-service
      port:
        number: 80
  rules:
  - host: "site1.autofacildespachante.com"
    http:
      paths:
      - path: "/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: site1-service
            port:
              number: 80
  - host: "pagamentos.autofacildespachante.com"
    http:
      paths:
      - path: "/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: wordpress-svc
            port:
              number: 8081              
  - host: "auth.autofacildespachante.com"
    http:
      paths:
      - path: "/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: keycloak-service
            port:
              number: 8080
